# in-memory-Todo-App

./: README.md  pyproject.toml  simple_test.py  test_interactive.py
docs/: quickstart.md
history/prompts/1-todo-app-cli/: 1-implement-todo-app-cli.implementation.prompt.md  2-convert-interactive-mode.refactor.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
history/prompts/todo-app-cli/: 1-create-todo-app-spec.spec.prompt.md  2-create-implementation-plan.plan.prompt.md  3-create-implementation-tasks.tasks.prompt.md
specs/1-todo-app-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-app-cli/checklists/: requirements.md
specs/1-todo-app-cli/contracts/: cli-contract.md
src/todo_app/: __main__.py
src/todo_app/cli/: __init__.py  main.py
src/todo_app/domain/: __init__.py  models.py  services.py
src/todo_app/storage/: __init__.py  memory_storage.py
