[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"

[project]
name = "todo-app-cli"
version = "0.1.0"
description = "A command-line todo application with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
todo-app = "src.todo_app.__main__:main"

[project.urls]
"Homepage" = "https://github.com/your-username/todo-app-cli"
"Bug Reports" = "https://github.com/your-username/todo-app-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]